refactor(execution-service): modernize architecture, harden OS execution, and standardize docs
- Architecture & Clean Code:
  - Eliminate wildcard imports and inject centralized ObjectMapper bean.
  - Extract domain constants for routing keys, status codes, and error types.
  - Enforce defensive programming and immutability across models/records.
  - Remove informal comments and boilerplate Javadoc to avoid over-documentation.
  - Add standardized TODO comments for future structured logging migration.

- Security Boundaries & OS Execution:
  - Harden KillProcessTool with critical process blacklists and kernel PID safeguards (0 and 4).
  - Mitigate Command Injection in OpenWebTool via strict URI scheme checks and shell metacharacter filtering.
  - Enforce input range validation on PortScannerTool (1-65535) and ProcessAnalyzerTool (1-100).
  - Introduce bounded subprocess execution timeouts with forcible termination fallbacks.

- Messaging Resilience & RPC Contracts:
  - Preserve inbound correlationId in ExecutionListener to guarantee caller Future resolution in Python.
  - Add graceful AmqpException handling during ToolRegistryBroadcaster startup for offline resilience.

- Testing & Technical Documentation:
  - Add ToolsValidationTest covering safety barriers, URI validation, and port boundaries.
  - Author execution-service/README.md with a scalable component diagram, decoupled messaging boundaries, and an operational guide.